tests/e2e/multi_line_function_arguments2.error
Error: syntax error in story at line 3, column 7

3|        a =0
            ^

E0041: `=` is not allowed here
